# ui-reverse

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  setup-deps.sh
scripts/: abstract_widget.py  common.py  search-res-xml.py
tests/: run.sh  test02.xml
tests/test01/app/: local.properties
tests/test01/app/gradle/wrapper/: gradle-wrapper.properties
tests/test01/app/src/main/java/com/example/test01/: MainActivity.java
tests/test01/app/src/main/res/layout/: activity_main.xml  content_main.xml
tests/test01markii/: containsView.facts  idName.facts  layoutHeight.facts  layoutWidth.facts  methodLineNumber.facts
tests/test02/: local.properties
tests/test02/app/src/main/java/com/example/my_first_app/: FireMissilesDialogFragment.java  MainActivity.java
tests/test02markii/: methodLineNumber.facts
