[tool.poetry]
name = "ui-reverse"
version = "0.1.0"
description = ""
authors = ["Zhen Zhang <git@zhen-zhang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
msbase = {git = "https://github.com/izgzhen/msbase.py"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
